scripts/e2e/cmd/runner/testdata/one-namespace-one-ingress/invalid-configuration/app.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-cm
data:
  default.conf: |-
    server {
        listen 80 default_server;
        location / {
          return 200 "app";
        }
    }

---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: backend
spec:
  containers:
    - name: nginx
      imagePullPolicy: Always
      image: nginx:latest
      ports:
        - containerPort: 80
          name: http
      volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume
  volumes:
    - name: configmap-volume
      configMap:
        name: nginx-cm

---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: backend
spec:
  containers:
    - name: nginx
      imagePullPolicy: Always
      image: nginx:latest
      ports:
        - containerPort: 5000
          name: http
      volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume
  volumes:
    - name: configmap-volume
      configMap:
        name: nginx-cm

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-bin-service-deployment
spec:
  selector:
    matchLabels:
      app: http-bin-service
  replicas: 2
  template:
    metadata:
      labels:
        app: http-bin-service
    spec:
      containers:
        - name: http-bin-service
          imagePullPolicy: Always
          image: docker.io/kennethreitz/httpbin
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /status/201
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /status/202
              port: 80
              scheme: HTTP

---
apiVersion: v1
kind: Service
metadata:
  name: http-bin-service
spec:
  selector:
    app: http-bin-service
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: app.http
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: http-bin-service
              servicePort: http
    - host: app.http
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app1
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app1
            backend:
              serviceName: http-bin-service
              servicePort: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress2
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: app.http
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: http-bin-service
              servicePort: http
    - host: app.http
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app
            backend:
              serviceName: http-bin-service
              servicePort: http
          - path: /app1
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /app1
            backend:
              serviceName: http-bin-service
              servicePort: http
